# TL_lecture-slide-builder

./: .env.example  .gitignore  Features.md  LOG.md  README.md  cascade-prompt2.md  generate_slides.py  main.py  pyproject.toml  view-screen-indexes.py
tests/: test_config.py  test_file_manager.py  test_image_processor.py  test_ocr_processor.py  test_screen_capture.py  test_slide_capture.py  test_title_generator.py
