[project]
name = "tl-lecture-slide-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "mediapipe>=0.10.14",
    "mss>=10.0.0",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
